# IM

./: .clang-format  .clang_tidy  .gitignore  CMakeLists.txt  README.md  TODO  a.out  main.cpp  makefile  xmake.lua
.github/workflows/: codeql.yml
config/: config.yaml
helper/: aes128.cpp  aes128.hpp  sha256.cpp  sha256.hpp
include/: Common.h  MessageType.h  TimerHeap.h
include/db/: MySQL.h
include/server/: MsgTimer.h  Server.h  Service.h
include/server/db/: ConnectionPool.h  MySQL.h  Redis.h
include/server/model/: FriendModel.h  Group.h  GroupModel.h  OfflineMessageModel.h  User.h  UserModel.h
include/server/msgidserver/: MsgCommon.h  Redis.h  Server.h  Service.h
include/server/myserver/: Common.h  Connection.h  MyServer.h
src/bash/: killAll.sh  startRpcServer.sh  startServer.sh
src/client/: Client.cpp
src/common/: Common.cpp
src/common/token/: jwt_token.cpp  jwt_token.h
src/cscommon/constant/: msg.h
src/newclient/: CMakeLists.txt  apiclient.cpp  apiclient.h  client.cpp  client.h  codec.h  connclient.cpp  connclient.h  user.h
src/proto/auth/: auth.grpc.pb.cc  auth.grpc.pb.h  auth.pb.cc  auth.pb.h  auth.proto  generate.sh
src/proto/conversation/: conversation.grpc.pb.cc  conversation.grpc.pb.h  conversation.pb.cc  conversation.pb.h  conversation.proto  generate.sh
src/proto/gateway/: gateway.grpc.pb.cc  gateway.grpc.pb.h  gateway.pb.cc  gateway.pb.h  gateway.proto  generate.sh
src/proto/group/: generate.sh  group.grpc.pb.cc  group.grpc.pb.h  group.pb.cc  group.pb.h  group.proto
src/proto/msg/: generate.sh  msg.grpc.pb.cc  msg.grpc.pb.h  msg.pb.cc  msg.pb.h  msg.proto
src/proto/user/: generate.sh  user.grpc.pb.cc  user.grpc.pb.h  user.pb.cc  user.pb.h  user.proto
src/server/: CMakeLists.txt  Server.cpp  Service.cpp  path.txt
src/server/api/: CMakeLists.txt  api2rpc.h  apiserver.cpp  apiserver.h  auth.h  conversation.h  group.h  msg.h  user.h
src/server/common/: commonServer.cpp  commonServer.h  constant.h  msgHandler.h
src/server/common/config/: config.cpp  config.h
src/server/common/token/: jwt_token.cpp  jwt_token.h
src/server/common/utils/: commoUtils.cpp  commonUtils.h  msgutils.cpp  msgutils.h
src/server/db/: ConnectionPool.cpp  MySQL.cpp  Redis.cpp
src/server/db/cache/: auth.cpp  auth.h  common.cpp  common.h  conversation.cpp  conversation.h  group.cpp  group.h  msg.cpp  msg.h  user.cpp  user.h
src/server/db/controller/: chatlogDatabase.cpp  chatlogDatabase.h  conversationDatabase.cpp  conversationDatabase.h  groupDatabase.cpp  groupDatabase.h  msgDatabase.cpp  msgDatabase.h  userDatabase.cpp  userDatabase.h
src/server/db/localcache/: groupLocal.cpp  groupLocal.h
src/server/db/relation/: chatlog_model.h  common.h  conversation_model.h  group_model.h  user_model.h  utils.cpp  utils.h
src/server/db/table/: chatlog-odb.cxx  chatlog-odb.hxx  chatlog-odb.ixx  chatlog.h  chatlog.sql  conversation-odb.cxx  conversation-odb.hxx  conversation-odb.ixx  conversation.cpp  conversation.h  conversation.sql  group-odb.cxx  group-odb.hxx  group-odb.ixx  group.h  group.sql  user-odb.cxx  user-odb.hxx  user-odb.ixx  user.h  user.sql
src/server/gateway/: CMakeLists.txt  client.cpp  client.h  clientmap.h  gateMsghandler.cpp  gateMsghandler.h  msghandler.h  rpcService.cpp  rpcService.h  server.cpp  server.h
src/server/model/: FriendModel.cpp  GroupModel.cpp  OfflineMessageModel.cpp  UserModel.cpp
src/server/mq/: consumer.cpp  consumer.h  deliverycallback.cpp  deliverycallback.h  kafka.cpp  kafka.h  producer.cpp  producer.h  utils.cpp  utils.h
src/server/msgidserver/: Redis.cpp  Server.cpp  Service.cpp  main.cpp
src/server/myserver/: Common.cpp  Connection.cpp  MyServer.cpp
src/server/persist/: CMakeLists.txt  server.cpp  toMysqlHandler.cpp  toMysqlHandler.h
src/server/push/: CMakeLists.txt  consumerHandler.cpp  consumerHandler.h  pushServer.cpp  pushServer.h  pusher.cpp  pusher.h
src/server/rpc/: CMakeLists.txt
src/server/rpc/auth/: CMakeLists.txt  auth.cpp  auth.h
src/server/rpc/conversation/: CMakeLists.txt  conversation.cpp  conversation.h
src/server/rpc/group/: CMakeLists.txt  group.cpp  group.h
src/server/rpc/msg/: CMakeLists.txt  msg.cpp  msg.h
src/server/rpc/user/: CMakeLists.txt  user.cpp  user.h
src/server/rpcclient/: CMakeLists.txt
src/server/rpcclient/auth/: CMakeLists.txt  auth.cpp  auth.h
src/server/rpcclient/conversation/: CMakeLists.txt  conversation.cpp  conversation.h
src/server/rpcclient/gateway/: gateway.h
src/server/rpcclient/group/: CMakeLists.txt  group.cpp  group.h
src/server/rpcclient/msg/: CMakeLists.txt  msg.cpp  msg.h
src/server/rpcclient/user/: CMakeLists.txt  user.cpp  user.h
src/server/tempdb/: MySQL.cpp  Redis.cpp
src/server/transfer/: CMakeLists.txt  msgHandler.h  newMsgHandler.cpp  newMsgHandler.h  server.cpp  server.h
test/: input.cpp  makefile
test/GroupModelTest/: test.cpp
test/Redis/: redis_test.cpp  test_msg_id.cpp
test/connection_pool/: test.cpp
test/muduo/: makefile  server.cpp
